[gd_scene load_steps=3 format=3 uid="uid://chsflmhi2mt82"]

[ext_resource type="Script" uid="uid://b8525g5wrhmk" path="res://shootemup/units/enemies/weapons/burst_rifle.gd" id="1_sbfxy"]
[ext_resource type="PackedScene" uid="uid://eoyctovw0etd" path="res://shootemup/units/projectiles/bullet.tscn" id="2_7pbtx"]

[node name="BurstRifle" type="Node2D"]
script = ExtResource("1_sbfxy")
projectile = ExtResource("2_7pbtx")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
